[package]
name = "freeton_ocaml_sdk"
version = "0.1.0"
edition = "2018"
authors = ["Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>"]

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/freeton_ocaml_sdk/lib.rs"

[dependencies]
ocaml = "0.21"
ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }

# ton_client = { git = 'https://github.com/tonlabs/TON-SDK.git' }
# ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git' }
ton_client = { git = 'https://github.com/lefessan/TON-SDK.git', branch = "z-2021-05-25-pub" }
ton_sdk = { git = 'https://github.com/lefessan/TON-SDK.git', branch = "z-2021-05-25-pub" }
# ton_client = { git = 'file:///home/lefessan/GIT/FREETON/TONLABS/TON-SDK', branch = "pub" }
# ton_sdk = { git = 'file:///home/lefessan/GIT/FREETON/TONLABS/TON-SDK', branch = "pub" }

ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
serde_json = "1.0"
#serde_derive = "1.0.116"
serde = "1.0"
base64 = "0.13.0"
futures = "0.3"
tokio = { version = "0.2.13", features = ["sync", "stream"], default-features = false }
hex = "0.3.2"
chrono = "0.4"
ed25519-dalek = "1.0.0-pre.3"
crc-any = "2.2.3"
num-bigint = "0.2.2"

# Or use the development version:
# ocaml = {git = "git://github.com/zshipko/ocaml-rs"}

[source.crates-io]
replace-with = "vendored-sources"

[source."https://github.com/lefessan/TON-SDK.git"]
git = "https://github.com/lefessan/TON-SDK.git"
branch = "z-2021-05-25-pub"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/bip39-rs.git"]
git = "https://github.com/tonlabs/bip39-rs.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/lockfree.git"]
git = "https://github.com/tonlabs/lockfree.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/sodalite.git"]
git = "https://github.com/tonlabs/sodalite.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-abi.git"]
git = "https://github.com/tonlabs/ton-labs-abi.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-assembler.git"]
git = "https://github.com/tonlabs/ton-labs-assembler.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-block-json.git"]
git = "https://github.com/tonlabs/ton-labs-block-json.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-block.git"]
git = "https://github.com/tonlabs/ton-labs-block.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-executor.git"]
git = "https://github.com/tonlabs/ton-labs-executor.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-types.git"]
git = "https://github.com/tonlabs/ton-labs-types.git"
replace-with = "vendored-sources"

[source."https://github.com/tonlabs/ton-labs-vm.git"]
git = "https://github.com/tonlabs/ton-labs-vm.git"
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
