; if you modify this file, add 'test' to the 'skip' field in drom.toml

(library
 (name lib_expect_tests)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries freeton_ocaml_sdk freeton_ocaml_rust freeton_client_lib freeton_base_lib freeton_client_lwt) ; add your project libraries here
 )
